@@ -263,3 +263,6 @@ https://newnet.tw/Newsletter/news.aspx?Iinfo=4&iNumber=28293
 https://www.aljazeera.com/news/2020/08/hong-kong-media-tycoon-arrested-security-law-200810000937967.html
 https://www.aljazeera.com/indepth/features/tale-isolations-200722114132821.html
 http://news.tnn.tw/news.html?c=5&id=141279
+https://www.epochtimes.com/b5/20/4/19/n12044450.htm
+https://news.pts.org.tw/article/475163
+https://news.pts.org.tw/article/477544
